--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,10 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+        <h2> Test</h2>
+
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
