--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,4 +5,5 @@
  // set if you're also including font-awesome
  // $fa-font-path: "~font-awesome/fonts";
 
-@import '~bootstrap-sass/assets/stylesheets/bootstrap';
+//@import '~bootstrap-sass/assets/stylesheets/bootstrap';
+//@import "~css-reset-and-normalize-sass";
