--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,12 +5,14 @@
     <title>{% block title %}Welcome!{% endblock %}</title>
 
     {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('/build/css/app.css') }}">
-    {% endblock %}
-    {% block javascripts %}
-        <script type="javascript" href="{{ asset('/build/js/app.js') }}"></script>
+        <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     {% endblock %}
+
     {% block menu  %}
     {% include('_partial/navbar.html.twig') %}
     {% endblock %}
@@ -22,6 +24,11 @@
 {% endblock %}
 {% block text %}
 {% endblock %}
+{% block javascripts %}
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="javascript" href="{{ asset('build/js/app.js') }}"></script>
 
+{% endblock %}
 </body>
 </html>
