--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,5 +5,6 @@
  // set if you're also including font-awesome
  // $fa-font-path: "~font-awesome/fonts";
 
-//@import '~bootstrap-sass/assets/stylesheets/bootstrap';
+//ssssssssssssss@import '~bootstrap-sass/assets/stylesheets/bootstrap';
 //@import "~css-reset-and-normalize-sass";
+
