--- a/templates/hw9/number-page.html.twig
+++ b/templates/hw9/number-page.html.twig
@@ -1,8 +1,10 @@
 {% extends 'base.html.twig' %}
 {% block text %}
-<div class="container-fluid">
+
     <div class="bg-info">
         <h1 class="text-primary ">{{ page }}</h1>
     </div>
-</div>
+
+{% endblock %}
+ {% block sidebar %}
 {% endblock %}
